# aiogram_subscriber_checker

./: bot_checker.service  main.py  pyproject.toml  requirements.txt  start.sh
bot/: loader.py
bot/dao/: base.py
bot/data/: .env.dist  config.py
bot/handlers/: callback_datas.py  filters.py  models.py  schemas.py  services.py
bot/handlers/admin/: keyboards.py  router.py  states.py
bot/handlers/article/: keyboards.py  router.py
bot/handlers/error/: router.py
bot/handlers/start/: router.py
bot/utils/: router.py
migrations/: env.py
migrations/versions/: 3beb6ac279cd_usermodel_add.py  6d6ed69a5459_database_creation.py  ec3398763047_database_update.py
